--- a/Cooleaf/UI/Main.storyboard
+++ b/Cooleaf/UI/Main.storyboard
@@ -3,6 +3,8 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
@@ -1135,8 +1137,8 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nGb-nD-iZ7">
                                 <rect key="frame" x="10" y="20" width="580" height="560"/>
                                 <subviews>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="F26-Jd-bXK" customClass="CLCommentTableView">
-                                        <rect key="frame" x="0.0" y="54" width="580" height="454"/>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="F26-Jd-bXK" customClass="CLCommentTableView">
+                                        <rect key="frame" x="0.0" y="40" width="580" height="480"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <prototypes>
                                             <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="commentCell" id="RW2-nf-Jte" customClass="CLCommentCell">
@@ -1146,22 +1148,59 @@
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xtD-bC-mrA">
-                                                            <rect key="frame" x="24" y="25" width="50" height="50"/>
+                                                            <rect key="frame" x="8" y="20" width="40" height="40"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="width" constant="50" id="Bd3-Tf-rUk"/>
-                                                                <constraint firstAttribute="height" constant="50" id="Rdv-XN-G8c"/>
+                                                                <constraint firstAttribute="width" constant="40" id="4dC-6f-6to"/>
+                                                                <constraint firstAttribute="height" constant="40" id="F84-Rc-frL"/>
                                                             </constraints>
                                                         </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Db-Xs-lGC">
+                                                            <rect key="frame" x="61" y="20" width="251" height="21"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="251" id="omE-2c-KIZ"/>
+                                                            </constraints>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="37Y-ea-ISH">
+                                                            <rect key="frame" x="61" y="39" width="459" height="21"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tTl-5i-3F0">
+                                                            <rect key="frame" x="530" y="16" width="42" height="21"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="42" id="eaU-mG-ak7"/>
+                                                            </constraints>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
                                                     </subviews>
                                                     <constraints>
-                                                        <constraint firstItem="xtD-bC-mrA" firstAttribute="leading" secondItem="H2f-yA-4NM" secondAttribute="leadingMargin" constant="16" id="Duu-PQ-4eP"/>
-                                                        <constraint firstItem="xtD-bC-mrA" firstAttribute="top" secondItem="H2f-yA-4NM" secondAttribute="topMargin" constant="17" id="Wkm-dt-PXh"/>
-                                                        <constraint firstAttribute="trailingMargin" secondItem="xtD-bC-mrA" secondAttribute="trailing" constant="518" id="csd-nO-SWh"/>
-                                                        <constraint firstAttribute="bottomMargin" secondItem="xtD-bC-mrA" secondAttribute="bottom" constant="16" id="dDs-Gn-TWP"/>
+                                                        <constraint firstItem="37Y-ea-ISH" firstAttribute="bottom" secondItem="xtD-bC-mrA" secondAttribute="bottom" id="2N0-qa-xoa"/>
+                                                        <constraint firstItem="37Y-ea-ISH" firstAttribute="top" secondItem="H2f-yA-4NM" secondAttribute="topMargin" constant="31" id="5gX-D3-vNp"/>
+                                                        <constraint firstAttribute="bottomMargin" secondItem="xtD-bC-mrA" secondAttribute="bottom" constant="11" id="6W7-2e-OFH"/>
+                                                        <constraint firstItem="xtD-bC-mrA" firstAttribute="leading" secondItem="H2f-yA-4NM" secondAttribute="leadingMargin" id="Qvo-5F-deX"/>
+                                                        <constraint firstItem="xtD-bC-mrA" firstAttribute="top" secondItem="H2f-yA-4NM" secondAttribute="topMargin" constant="12" id="R0v-U4-2nn"/>
+                                                        <constraint firstItem="tTl-5i-3F0" firstAttribute="top" secondItem="H2f-yA-4NM" secondAttribute="topMargin" constant="8" id="a9n-ia-s4w"/>
+                                                        <constraint firstAttribute="bottomMargin" secondItem="tTl-5i-3F0" secondAttribute="bottom" constant="34" id="bWs-6X-Zgw"/>
+                                                        <constraint firstAttribute="trailingMargin" secondItem="xtD-bC-mrA" secondAttribute="trailing" constant="524" id="dP7-9q-PIa"/>
+                                                        <constraint firstItem="6Db-Xs-lGC" firstAttribute="trailing" secondItem="37Y-ea-ISH" secondAttribute="trailing" constant="-208" id="o4B-qq-weq"/>
+                                                        <constraint firstAttribute="bottomMargin" secondItem="6Db-Xs-lGC" secondAttribute="bottom" constant="30" id="oY4-6A-dQi"/>
+                                                        <constraint firstItem="tTl-5i-3F0" firstAttribute="baseline" secondItem="6Db-Xs-lGC" secondAttribute="firstBaseline" id="rmm-3o-MyU"/>
+                                                        <constraint firstItem="6Db-Xs-lGC" firstAttribute="leading" secondItem="xtD-bC-mrA" secondAttribute="trailing" constant="13" id="rvb-0F-4s9"/>
+                                                        <constraint firstAttribute="trailingMargin" secondItem="tTl-5i-3F0" secondAttribute="trailing" id="wNF-9I-KeS"/>
+                                                        <constraint firstItem="6Db-Xs-lGC" firstAttribute="leading" secondItem="37Y-ea-ISH" secondAttribute="leading" id="zRE-YY-0co"/>
                                                     </constraints>
                                                 </tableViewCellContentView>
                                                 <connections>
                                                     <outlet property="cellImage" destination="xtD-bC-mrA" id="TYz-NY-WKY"/>
+                                                    <outlet property="nameLabel" destination="6Db-Xs-lGC" id="6ZW-sX-cfK"/>
+                                                    <outlet property="postLabel" destination="37Y-ea-ISH" id="tHf-3c-TqC"/>
+                                                    <outlet property="timeLabel" destination="tTl-5i-3F0" id="hXS-BU-8r6"/>
                                                 </connections>
                                             </tableViewCell>
                                         </prototypes>
@@ -1170,38 +1209,17 @@
                                             <outlet property="delegate" destination="XFn-1X-MTq" id="3kH-vw-7Hr"/>
                                         </connections>
                                     </tableView>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hu2-Hf-zRS">
-                                        <rect key="frame" x="0.0" y="507" width="580" height="54"/>
-                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="54" id="FH6-3o-67W"/>
-                                        </constraints>
-                                    </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yLY-rc-Noz">
-                                        <rect key="frame" x="0.0" y="0.0" width="580" height="54"/>
-                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="54" id="tgx-vz-Vp5"/>
-                                        </constraints>
-                                    </view>
                                 </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="0.0" green="0.95686274510000002" blue="0.0054740344939999998" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstItem="F26-Jd-bXK" firstAttribute="leading" secondItem="nGb-nD-iZ7" secondAttribute="leading" id="2sR-74-NmS"/>
-                                    <constraint firstItem="yLY-rc-Noz" firstAttribute="top" secondItem="nGb-nD-iZ7" secondAttribute="top" id="2ue-GX-ahB"/>
-                                    <constraint firstAttribute="trailing" secondItem="Hu2-Hf-zRS" secondAttribute="trailing" id="FoG-HK-asH"/>
-                                    <constraint firstItem="yLY-rc-Noz" firstAttribute="leading" secondItem="nGb-nD-iZ7" secondAttribute="leading" id="HX6-yX-LIn"/>
-                                    <constraint firstAttribute="trailing" secondItem="F26-Jd-bXK" secondAttribute="trailing" id="QMg-4X-qlM"/>
-                                    <constraint firstAttribute="trailing" secondItem="yLY-rc-Noz" secondAttribute="trailing" id="WaB-mT-H2X"/>
-                                    <constraint firstItem="Hu2-Hf-zRS" firstAttribute="top" secondItem="F26-Jd-bXK" secondAttribute="bottom" constant="-1" id="cnF-zh-7Vp"/>
-                                    <constraint firstItem="F26-Jd-bXK" firstAttribute="top" secondItem="yLY-rc-Noz" secondAttribute="bottom" id="izu-Lt-KhW"/>
-                                    <constraint firstItem="Hu2-Hf-zRS" firstAttribute="leading" secondItem="nGb-nD-iZ7" secondAttribute="leading" id="o4n-th-p9Y"/>
-                                    <constraint firstAttribute="bottom" secondItem="Hu2-Hf-zRS" secondAttribute="bottom" constant="-1" id="pOt-OO-5yD"/>
-                                    <constraint firstItem="F26-Jd-bXK" firstAttribute="top" secondItem="nGb-nD-iZ7" secondAttribute="top" constant="54" id="zyo-Z4-yDI"/>
+                                    <constraint firstItem="F26-Jd-bXK" firstAttribute="top" secondItem="nGb-nD-iZ7" secondAttribute="top" constant="40" id="9Zt-8t-tiY"/>
+                                    <constraint firstItem="F26-Jd-bXK" firstAttribute="leading" secondItem="nGb-nD-iZ7" secondAttribute="leading" id="KzV-I9-WMM"/>
+                                    <constraint firstAttribute="trailing" secondItem="F26-Jd-bXK" secondAttribute="trailing" id="M8R-Yc-4Vp"/>
+                                    <constraint firstAttribute="bottom" secondItem="F26-Jd-bXK" secondAttribute="bottom" constant="40" id="R4r-Zu-fV0"/>
                                 </constraints>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" red="0.15732851989999999" green="0.81750561310000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="nGb-nD-iZ7" secondAttribute="trailing" constant="-6" id="H3k-za-tjd"/>
                             <constraint firstItem="qUi-OS-nZk" firstAttribute="top" secondItem="nGb-nD-iZ7" secondAttribute="bottom" constant="20" id="VA1-nI-1mf"/>
@@ -1210,10 +1228,8 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="bottomView" destination="Hu2-Hf-zRS" id="IKo-mh-TNz"/>
                         <outlet property="mainView" destination="nGb-nD-iZ7" id="en5-uU-koV"/>
                         <outlet property="tableView" destination="F26-Jd-bXK" id="s6P-lp-wMj"/>
-                        <outlet property="topView" destination="yLY-rc-Noz" id="0sI-Gb-yly"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vP0-zM-jwt" userLabel="First Responder" sceneMemberID="firstResponder"/>
