--- a/Cooleaf/UI/Cell/CLInformationTableViewHeader.xib
+++ b/Cooleaf/UI/Cell/CLInformationTableViewHeader.xib
@@ -25,7 +25,7 @@
                         <constraint firstAttribute="width" secondItem="EYS-YP-K8A" secondAttribute="height" multiplier="1:1" id="uNt-SN-AgX"/>
                     </constraints>
                 </imageView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r7K-5u-VZ0">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" reversesTitleShadowWhenHighlighted="YES" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r7K-5u-VZ0">
                     <rect key="frame" x="570" y="15" width="21" height="22"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="r7K-5u-VZ0" secondAttribute="height" multiplier="21:22" id="PKr-lZ-xLR"/>
@@ -39,7 +39,6 @@
                     </connections>
                 </button>
             </subviews>
-            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstAttribute="centerY" secondItem="2l5-cy-TYA" secondAttribute="centerY" id="7qC-LI-Knx"/>
                 <constraint firstItem="EYS-YP-K8A" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="9ti-BB-P5e"/>
