Removed static label from Profile

--- a/Cooleaf/UI/Main.storyboard
+++ b/Cooleaf/UI/Main.storyboard
@@ -340,20 +340,20 @@
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zOz-yK-TO8" userLabel="Blur Image View">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="158"/>
                                 </imageView>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="asdsa" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cyc-pf-Ovx">
-                                    <rect key="frame" x="279" y="92" width="41" height="18"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cyc-pf-Ovx">
+                                    <rect key="frame" x="300" y="100" width="0.0" height="0.0"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nurse, Children's Healthcare of Atlanta" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qiu-vj-hgd">
-                                    <rect key="frame" x="167" y="110" width="266.5" height="18"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qiu-vj-hgd">
+                                    <rect key="frame" x="300" y="100" width="0.0" height="0.0"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rewards: 600" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JYp-U7-hgT">
-                                    <rect key="frame" x="253" y="128" width="94.5" height="18"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JYp-U7-hgT">
+                                    <rect key="frame" x="300.5" y="100" width="0.0" height="0.0"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
@@ -366,7 +366,7 @@
                                     </constraints>
                                 </imageView>
                                 <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="lkL-Th-AgX">
-                                    <rect key="frame" x="175" y="166" width="251" height="29"/>
+                                    <rect key="frame" x="175" y="120" width="251" height="29"/>
                                     <segments>
                                         <segment title="Information"/>
                                         <segment title="History"/>
@@ -382,7 +382,7 @@
                                 <constraint firstAttribute="bottom" secondItem="JYp-U7-hgT" secondAttribute="bottom" priority="997" constant="20" id="G5U-ft-oye"/>
                                 <constraint firstAttribute="centerX" secondItem="Qiu-vj-hgd" secondAttribute="centerX" id="Gcs-CO-8sP"/>
                                 <constraint firstAttribute="centerX" secondItem="lkL-Th-AgX" secondAttribute="centerX" id="Q4K-nm-63u"/>
-                                <constraint firstItem="cyc-pf-Ovx" firstAttribute="top" secondItem="yiu-hD-GTi" secondAttribute="bottom" id="SgN-mb-2rh"/>
+                                <constraint firstItem="cyc-pf-Ovx" firstAttribute="top" secondItem="yiu-hD-GTi" secondAttribute="bottom" constant="8" id="SgN-mb-2rh"/>
                                 <constraint firstAttribute="centerX" secondItem="yiu-hD-GTi" secondAttribute="centerX" id="Tud-fS-Onq"/>
                                 <constraint firstAttribute="trailing" secondItem="zOz-yK-TO8" secondAttribute="trailing" id="Wpb-Um-aI2"/>
                                 <constraint firstItem="yiu-hD-GTi" firstAttribute="top" secondItem="E0F-qS-zAz" secondAttribute="top" constant="20" id="aNk-cz-mjC"/>
